= fix stuff related to 'Community Goal Display'