@@ -61,6 +61,7 @@ import "./features/world/windCompass"
 
 /*
     1.5.4 changelog
++ add separate features for 'Party Join and Leave messages'
 = fix stuff related to 'Community Goal Display'
     
     1.5.3 changelog
